<resources>
    <string name="app_name">New Jersey Devils</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_scorers">Top Scorers</string>
    <string name="home">Home</string>
    <string name="media">Media</string>
    <string name="schedule">Schedule</string>
    <string name="standings">Standings</string>
    <string name="player_stats">Player Stats</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">closed</string>
    <string name="period_1_name">1st</string>
    <string name="period_2_name">2nd</string>
    <string name="period_3_name">3rd</string>
    <string name="period_4_name">ot</string>
    <string name="period_so_name">so</string>
    <string name="final_score_name">Total</string>
    <string name="dash">-</string>
    <string name="score_summary_header">Score Summary</string>
    <string name="three_stars_header">3 Stars</string>
    <string name="boxscore_header">Boxscore</string>
    <string name="linescore_header">Linescore</string>
    <string name="players_on_ice_header">Players on Ice</string>
    <string name="view">View</string>
    <string name="gp">GP</string>
    <string name="w">W</string>
    <string name="l">L</string>
    <string name="ot">OT</string>
    <string name="pts">PTS</string>
    <string name="row">ROW</string>
    <string name="diff">DIFF</string>
    <string name="strk">STRK</string>
    <string name="fragment_home_title">New Jersey Devils</string>
    <string name="fragment_schedule_title">Schedule</string>
    <string name="fragment_stats_title">Player Stats</string>
    <string name="fragment_media_title">Media</string>
    <string name="fragment_standings_title">Standings</string>
    <string name="scoring_leaders">Last 5 Games</string>
    <string name="team_stats">Team Stats</string>
    <string name="goalie_watch_header">Goalie Watch</string>
    <string name="shootout_abbr">SO</string>
    <string name="save_percentage_abbr">SV%</string>
    <string name="goals_against_avg_abbr">GAA</string>
    <string name="record">Record</string>

    <string-array name="skaters_sort">
        <item>Points</item>
        <item>Goals</item>
        <item>Assists</item>
        <item>Penalty Minutes</item>
        <item>Time On Ice</item>
    </string-array>
    <string-array name="goalies_sort">
        <item>Save Percentage</item>
        <item>Games Started</item>
        <item>Goals Against Average</item>
    </string-array>
    <string name="title_activity_setup">SetupActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
