<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparentBlackIsh">
    <TextView
        android:id="@+id/division_name"
        android:textSize="10sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:paddingVertical="3dp"
        android:paddingHorizontal="8dp"
        />
    <TextView
        android:textSize="10sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/gp"
        android:paddingVertical="3dp"
        android:paddingHorizontal="8dp"
        />
    <TextView
        android:textSize="10sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/w"
        android:paddingVertical="3dp"
        android:paddingHorizontal="8dp"
        />
    <TextView
        android:textSize="10sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/l"
        android:paddingVertical="3dp"
        android:paddingHorizontal="8dp"
        />
    <TextView
        android:textSize="10sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/ot"
        android:paddingVertical="3dp"
        android:paddingHorizontal="8dp"
        />
    <TextView
        android:textSize="10sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/pts"
        android:paddingVertical="3dp"
        android:paddingHorizontal="8dp"
        />
    <TextView
        android:textSize="10sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/row"
        android:paddingVertical="3dp"
        android:paddingHorizontal="8dp"
        />
    <TextView
        android:textSize="10sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/diff"
        android:paddingVertical="3dp"
        android:paddingHorizontal="8dp"
        />
    <TextView
        android:textSize="10sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/strk"
        android:paddingVertical="3dp"
        android:paddingHorizontal="8dp"
        />
</TableRow>