<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/transparentBarely"
        android:layout_marginVertical="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">
                <ImageView
                    android:id="@+id/away_image"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="8dp"
                    android:scaleType="centerCrop"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <com.timfeid.njd.ui.FontTextView
                        android:id="@+id/away_name"
                        android:includeFontPadding="false"
                        android:textColor="@color/colorAccent"
                        android:textSize="10sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Cory Schnieder"/>
                    <com.timfeid.njd.ui.FontTextView
                        android:id="@+id/away_number"
                        android:includeFontPadding="false"
                        android:textColor="@color/transparentIsh"
                        android:height="18dp"
                        android:layout_marginTop="-2dp"
                        android:textSize="10sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="#35"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="13">
                <LinearLayout
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:gravity="start"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <com.timfeid.njd.ui.FontTextView
                        android:textColor="@color/colorAccent"
                        android:textSize="10sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        android:height="18dp"
                        android:includeFontPadding="false"
                        android:text="@string/record" />
                    <com.timfeid.njd.ui.FontTextView
                        android:textColor="@color/transparentIsh"
                        android:textSize="10sp"
                        android:height="18dp"
                        android:layout_marginTop="-6dp"
                        android:id="@+id/away_stat_record"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:text="12-30-20" />
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <com.timfeid.njd.ui.FontTextView
                        android:textColor="@color/colorAccent"
                        android:textSize="10sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        android:textAlignment="center"
                        android:height="18dp"
                        android:includeFontPadding="false"
                        android:text="@string/goals_against_avg_abbr" />
                    <com.timfeid.njd.ui.FontTextView
                        android:textColor="@color/transparentIsh"
                        android:textSize="10sp"
                        android:height="18dp"
                        android:layout_marginTop="-6dp"
                        android:id="@+id/away_stat_gaa"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:text="3.66" />
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <com.timfeid.njd.ui.FontTextView
                        android:textColor="@color/colorAccent"
                        android:textSize="10sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:height="18dp"
                        android:includeFontPadding="false"
                        android:text="@string/save_percentage_abbr" />
                    <com.timfeid.njd.ui.FontTextView
                        android:textColor="@color/transparentIsh"
                        android:textSize="10sp"
                        android:height="18dp"
                        android:layout_marginTop="-6dp"
                        android:textAlignment="center"
                        android:id="@+id/away_stat_svp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:text="20%" />
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <com.timfeid.njd.ui.FontTextView
                        android:textColor="@color/colorAccent"
                        android:textSize="10sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        android:textAlignment="center"
                        android:height="18dp"
                        android:includeFontPadding="false"
                        android:text="@string/shootout_abbr" />
                    <com.timfeid.njd.ui.FontTextView
                        android:textColor="@color/transparentIsh"
                        android:textSize="10sp"
                        android:height="18dp"
                        android:layout_marginTop="-6dp"
                        android:id="@+id/away_stat_so"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:text="0" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp"
            android:background="@color/transparentBarely" />
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="end"
                android:layout_marginBottom="10dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="end">
                    <com.timfeid.njd.ui.FontTextView
                        android:id="@+id/home_name"
                        android:textAlignment="textEnd"
                        android:includeFontPadding="false"
                        android:textColor="@color/colorAccent"
                        android:textSize="10sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Cory Schnieder"/>

                    <com.timfeid.njd.ui.FontTextView
                        android:id="@+id/home_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-2dp"
                        android:height="18dp"
                        android:includeFontPadding="false"
                        android:text="#35"
                        android:textAlignment="textEnd"
                        android:textColor="@color/transparentIsh"
                        android:textSize="10sp" />
                </LinearLayout>
                <ImageView
                    android:id="@+id/home_image"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="8dp"
                    android:scaleType="centerCrop"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="13">
                <LinearLayout
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <com.timfeid.njd.ui.FontTextView
                        android:textColor="@color/colorAccent"
                        android:textSize="10sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        android:height="18dp"
                        android:includeFontPadding="false"
                        android:text="@string/record" />
                    <com.timfeid.njd.ui.FontTextView
                        android:textColor="@color/transparentIsh"
                        android:textSize="10sp"
                        android:height="18dp"
                        android:layout_marginTop="-6dp"
                        android:id="@+id/home_stat_record"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:text="12-30-20" />
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <com.timfeid.njd.ui.FontTextView
                        android:textColor="@color/colorAccent"
                        android:textSize="10sp"
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        android:height="18dp"
                        android:includeFontPadding="false"
                        android:text="@string/goals_against_avg_abbr" />
                    <com.timfeid.njd.ui.FontTextView
                        android:textColor="@color/transparentIsh"
                        android:textSize="10sp"
                        android:height="18dp"
                        android:layout_marginTop="-6dp"
                        android:id="@+id/home_stat_gaa"
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:text="3.66" />
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <com.timfeid.njd.ui.FontTextView
                        android:textColor="@color/colorAccent"
                        android:textSize="10sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:height="18dp"
                        android:includeFontPadding="false"
                        android:text="@string/save_percentage_abbr" />
                    <com.timfeid.njd.ui.FontTextView
                        android:textColor="@color/transparentIsh"
                        android:textSize="10sp"
                        android:height="18dp"
                        android:layout_marginTop="-6dp"
                        android:id="@+id/home_stat_svp"
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:text="20%" />
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <com.timfeid.njd.ui.FontTextView
                        android:textColor="@color/colorAccent"
                        android:textSize="10sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:height="18dp"
                        android:includeFontPadding="false"
                        android:text="@string/shootout_abbr" />
                    <com.timfeid.njd.ui.FontTextView
                        android:textColor="@color/transparentIsh"
                        android:textSize="10sp"
                        android:height="18dp"
                        android:layout_marginTop="-6dp"
                        android:textAlignment="center"
                        android:id="@+id/home_stat_so"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:text="0" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>